syntax = "proto3";

option csharp_namespace = "netponto.AssetManagement.Protos";

option go_package="./;gen";

package AssetManagement;

service Capability {
	rpc CreateCapability (CreateCapabilityRequest) returns (CreateCapabilityResponse);
	rpc ListCapabilities (ListCapabilitiesRequest) returns (ListCapabilitiesResponse);
}

// Create Capability
message CreateCapabilityRequest {
	string tenantCode = 1;
	string name = 2;
}

message CreateCapabilityResponse {
	string url = 1;
}

// List Capabilities By Tenant
message ListCapabilitiesRequest {	
	string tenantCode = 1;
	int32	 index = 2;
	int32	 size = 3;
	string sort = 4;
	string order = 5;
}

message ListCapabilitiesResponse {
  repeated CapabilitieResponse data = 1;
  int32	totalCount = 2;
}

message CapabilitieResponse {
	int64 id = 1;
	string name = 2;
}